app/assets/stylesheets/common/base/compose.scss
@use "lib/viewport";

html.composer-open:not(.has-full-page-chat) {
  #main-outlet {
    padding-bottom: var(--composer-height);
    transition: padding-bottom 250ms ease;
  }
}

:root {
  --composer-max-width--hide-preview: 740px;
  --composer-popup-background: var(--secondary);
}

.grippie {
  cursor: row-resize;
  padding: var(--space-2) 0 0;

  @media (pointer: coarse) {
    padding: 0.35em 0;
  }

  &::before {
    content: "";
    display: block;
    height: var(--space-1);
    width: 3em;
    margin-inline: auto;
    background-color: var(--primary-low-mid);
    border-radius: 3px;
    border: none;
    transition: background-color 0.15s ease;
  }

  &:hover::before {
    background-color: var(--primary-high);
  }
}

.composer-toggles-menu-content,
.composer-actions-dropdown {
  z-index: z("composer", "dropdown") + 1;
}
/* ... */

